<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HubMenu"
    android:id="@+id/hub_menu_layout"
    android:background="@color/background_material_dark">

    <TextView android:text="@string/my_apps" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nanodegree_title"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:gravity="center"
        android:layout_marginBottom="@dimen/abc_text_size_large_material"
        android:textStyle="bold"
        android:textColor="@color/abc_primary_text_material_dark" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_stremer"
        android:id="@+id/button_spotify"
        android:nestedScrollingEnabled="true"
        android:layout_below="@+id/nanodegree_title"
        android:layout_marginTop="@dimen/abc_button_padding_vertical_material"
        android:onClick="launchButtonClick" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/button_scores"
        android:layout_marginTop="@dimen/abc_button_padding_vertical_material"
        android:nestedScrollingEnabled="true"
        android:layout_below="@+id/button_spotify"
        android:onClick="launchButtonClick" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/button_library"
        android:minWidth="@dimen/abc_button_padding_horizontal_material"
        android:nestedScrollingEnabled="true"
        android:layout_below="@+id/button_scores"
        android:layout_marginTop="@dimen/abc_button_padding_vertical_material"
        android:onClick="launchButtonClick" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button_build_it_bigger"
        android:nestedScrollingEnabled="true"
        android:layout_below="@+id/button_library"
        android:layout_marginTop="@dimen/abc_button_padding_vertical_material"
        android:onClick="launchButtonClick" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/button_xyz_reader"
        android:nestedScrollingEnabled="true"
        android:layout_marginTop="@dimen/abc_button_padding_vertical_material"
        android:layout_below="@+id/button_build_it_bigger"
        android:onClick="launchButtonClick" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button_capstone"
        android:nestedScrollingEnabled="true"
        android:layout_below="@+id/button_xyz_reader"
        android:layout_marginTop="@dimen/abc_button_padding_vertical_material"
        android:onClick="launchButtonClick" />

</RelativeLayout>
